# rust-project

./: .env  .gitignore  Cargo.toml  README.md
actixwebintro/: Cargo.toml
actixwebintro/src/: main.rs
crud_op/: Cargo.toml
crud_op/src/: main.rs
rust-project/: README.md
rust-project/src/db/: marks_db.rs
rust-project/src/handlers/: forgot_password.rs
rust-project/src/models/: login.rs  results.rs
rust-sample-project/: .env  README.md
rust-sample-project/src/handlers/: get_results.rs  login.rs  mod.rs  publish.rs  send_email.rs
rust-sample-project/src/models/: edited_mark.rs  marksforsum.rs  mod.rs  password_change.rs  user.rs
sendmail/: Cargo.toml
sendmail/src/: main.rs
src/: db.rs  handlers.rs  main.rs  models.rs
src/db/: marks_db.rs  mod.rs  user_db.rs
src/handlers/: add_marks.rs  create_user.rs  deleteMarks.rs  edit_marks.rs  email.rs  get_results.rs  get_students.rs  marks.rs  mod.rs  user.rs
src/models/: edit_mark.rs  edited_mark.rs  marks.rs  marksforsum.rs  mod.rs  user.rs
traitImpls/: Cargo.toml
traitImpls/src/: main.rs
