[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
bcrypt = "0.14"            # For hashing passwords
lettre = "0.10"            # No features required
dotenv = "0.15"            # For managing environment variables